Fix for input alignment (css).

--- a/code/events/css/style.css
+++ b/code/events/css/style.css
@@ -2,6 +2,10 @@
 	padding-top: 14px !important;
 }
 
+.eventTable .eventTDTime input {
+  text-align: center;
+}
+
 /*ui component fix for modal*/
 .ui-autocomplete  {
   z-index: 500;
@@ -45,10 +49,8 @@
 /*Modal*/
 
 .reveal-modal {
-  /*position: absolute !important;*/
   top: 15px;
   bottom: 15px;
-  /*max-height: 400px;*/
   overflow-y: auto;
 }
 
@@ -105,12 +107,6 @@
   height: 30px;
 }
 
-/*tab slots*/
-/*.slotTab, .infoTab, .scheduleTab {
-  max-height: 400px;
-  overflow-y: auto;
-}*/
-
 /*calendar*/
 .colItemCalendar {
   padding: 5px;
@@ -158,15 +154,6 @@
   width: 100%;
 }
 
-/*.scheduleTab, .ct-calendar {
-  width: 49%;
-  float: left;
-}*/
-
-/*.ct-calendar {*/
-  /*float: right;*/
-/*}*/
-
 .duration-fields {
   width: 33.3333%;
   float: left;
@@ -174,12 +161,7 @@
 
 .duration-fields input {
   width: 95%;
-  /*padding: 5px;*/
 }
-
-/*.duration-fields input:nth-child(2) {
-  float: right;
-}*/
 
 .slotTab .ui-multiselect {
   margin: 0;
